--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
       </div>
       <button type="button" class="load-more hidden">Load more</button>
     </main>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
